# sertas

./: .gitignore  DEPLOY.md  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: windows-capture.yml
app-client/: build.gradle.kts
app-client/src/main/java/dev/sertas/app/: CallController.java  JoinPrefs.java  Launcher.java  SertasApp.java  ServerConfig.java
docs/superpowers/plans/: 2026-06-24-phase-0-signaling-and-foundations.md  2026-06-26-phase-a-screen-share-audio-pipeline.md  2026-06-26-phase-b-macos-screencapturekit-audio.md
docs/superpowers/specs/: 2026-06-24-discord-analog-voice-app-design.md  2026-06-26-screen-share-audio-and-mixer-design.md
gradle/: libs.versions.toml
media/: build.gradle.kts
media-engine/: build.gradle.kts
media-engine/src/main/java/dev/sertas/engine/: CameraSource.java  FakeSystemAudioProvider.java  IceServersConfig.java  JavaSoundDemoPlayer.java  MacScreenVideoCapture.java  MacSystemAudioCapture.java  MeshCoordinator.java  MeshListener.java  Pcm10msReframer.java  PeerSession.java  RemoteAudioMixer.java  ScreenAudioConnection.java  ScreenCaptureSource.java  ScreenVideoCapture.java  SoftwareMixer.java  SystemAudioProvider.java  SystemAudioTrack.java  WebRtcEngine.java  WinScreenVideoCapture.java  WinSystemAudioCapture.java
media-engine/src/test/java/dev/sertas/engine/: AudioTrackOfferTest.java  FakeSystemAudioProviderTest.java  MacScreenVideoCaptureTest.java  MacSystemAudioCaptureTest.java  MeshIntegrationTest.java  (+14 more)
native-capture/macos/: SertasAudio.swift  SertasVideo.swift
native-capture/windows/: CMakeLists.txt  SertasAudioWin.cpp  sertas_capture.cpp
protocol/: build.gradle.kts
scripts/: build-macos-audio-dylib.sh  build-windows-audio-dll.bat  package-macos.sh  package-windows.sh
signaling-client/: build.gradle.kts
signaling-server/: build.gradle.kts
(+25 files in other folders)
